Fixed: En/Ru button hover on ios, nav font size on low res, changed About and general text optimization

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -33,7 +33,7 @@
   font-weight: 400;
   line-height: normal;
   text-rendering: optimizeLegibility;
-  text-align: justify
+  text-align: justify;
 }
 
 @media (max-width: 1000px) {
