--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -53,6 +53,7 @@
   display: flex;
   order: 2;
   align-self: center;
+  align-content: center;
   gap: 5px;
   padding: 0;
   margin: 0;
@@ -88,6 +89,10 @@
   cursor: pointer;
   color: #F74843;
   fill: #F74843;
+}
+
+.lngChanger:hover .lngChangerText {
+  color: #F74843;
 }
 
 @media (max-width: 1000px) {
@@ -131,6 +136,10 @@
 }
 
 @media (max-width: 428px) {
+  .listItemLink {
+    font-size: 18px;
+  }
+
   .navigationBlock {
     justify-content: center;
   }
